cluster/apps/default/jellyfin-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-internal
  namespace: default
spec:
  ports:
    - port: 8096
      targetPort: 8096
---
kind: Endpoints
apiVersion: v1
metadata:
  name: jellyfin-internal
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.97
    ports:
      - port: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-internal
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin-internal
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.${SECRET_DOMAIN}
      secretName: jellyfin-tls
